# pybind11-skeleton

./: .gitignore  CMakeLists.txt  README.md  setup.py
include/: source.h
python/: source.cpp
src/: main.cpp  main.h
